# incagent

./: .gitignore  01-why.md  02-wyoming-dao-llc.md  03-openclaw-setup.md  04-soul-md.md  05-eight-tentacles.md  06-10-chapters.md  09-security-compliance.md  ApoTrail 仕様・数字まとめ（コード実装ベース）.ini  HEARTBEAT.md  IDENTITY.md  LICENSE  README.md  SECURITY_ROADMAP.md  SOUL.md  STANDING_ORDERS.md  USER.md  all-checklists.md  pyproject.toml
.openclaw/: workspace-state.json
bot/: moltbook_bot.py  requirements.txt  x_bot.py
contracts/: IncAgentEscrow.sol
docs/: architecture.md  protocol-spec.md  quickstart.md
examples/: autonomous_negotiation.py  autonomous_network.py  demo_live.py  full_demo.py  human_in_the_loop.py  multi_agent_market.py  simple_trade.py
incagent/: __init__.py  agent.py  approval.py  cli.py  config.py  contract.py  delivery.py  gateway.py  gateway_http.py  generate-pdf-pdfkit.js  generate-pdf.js  heartbeat.py  identity.py  ledger.py  memory.py  messaging.py  metrics.py  negotiation.py  package-lock.json  package.json  payment.py  registry.py  resilience.py  security.py  self_improve.py  settlement.py  skills.py  tax.py  transaction.py
incagent-package/: LICENSE  MANIFEST.in  README.md  setup.py
memory/: 2026-03-15.md
scripts/: check-stripe-revenue.sh  post-to-x-oauth.sh  security-audit.sh
security/: skills-audit.md  threat-intel.md
site/: index.html  live.html  style.css
skills/: cloud_compute.md  supply_chain.md
tests/: test_agent.py  test_contract.py  test_e2e.py  test_e2e_trade.py  test_escrow.py  test_gateway.py  test_metrics.py  test_tax.py  (+10 more)
(+18 files in other folders)
