[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incagent"
version = "0.2.0"
description = "Open protocol for autonomous AI-to-AI corporate transactions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "IncAgent", email = "hello@incagent.ai" }]
keywords = ["ai", "agent", "autonomous", "corporate", "transactions", "protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "cryptography>=42.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.scripts]
incagent = "incagent.cli:main"

[project.optional-dependencies]
llm = ["anthropic>=0.40", "openai>=1.50"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]
all = ["incagent[llm,dev]"]

[project.urls]
Homepage = "https://incagent.ai"
Repository = "https://github.com/incagent/incagent"
Documentation = "https://github.com/incagent/incagent/tree/main/docs"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
